...
    <string name="currently_playing_artist">Artist of currently playing song</string>
    <string name="currently_playing_extra_info">Extra info for currently playing song</string>

    <string name="play_pause">play or pause</string>
    <string name="skip_next">skip to next</string>
    <string name="skip_prev">skip to previous</string>
    <string name="touch_to_cast">Touch to connect to a Google Cast device</string>
    <!-- Use the default receiver. To customize a styled media receiver, you can use
         the css and images under <project-root>/docs/cast_styled_receiver -->
    <string name="cast_application_id" translatable="false">CC1AD845</string>
    <string name="home_title">Home</string>
    <string name="now_playing">Now Playing</string>
    <string name="background_image_str" translatable="false">Background image for album art</string>
...
    <string name="lullabies_main_activity_base_collection_banner" translatable="false">ca-app-pub-5221781428763224/3093632356</string>
    <string name="full_screen_activity_banner" translatable="false">ca-app-pub-5221781428763224/1164543404</string>
    <string name="lullabies_main_activity_mom_songs_banner" translatable="false">ca-app-pub-5221781428763224/6789972464</string>
    <string name="lullabies_main_activity_classic_tones_banner" translatable="false">ca-app-pub-5221781428763224/4035198062</string>
    <string name="test_banner" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="cancel">Cancel</string>
    <string name="buy_ads_free">Buy ads free</string>
    <string name="ads_free_forever">Ads free forever</string>
    <string name="remove_ads">Remove ads</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="rate_app">Rate app</string>
    <string name="home">Home</string>
    <string name="contact_me">Contact me:</string>
    <string name="privacy_policy_agreement">Privacy Policy agreement</string>
    <string name="privacy_policy_explanation">Using this app you agreed with our Privacy Policy.</string>
...
